add provisioning to grafana

--- a/deployment/ansible-vitam-extra/roles/grafana/templates/grafana.ini.j2
+++ b/deployment/ansible-vitam-extra/roles/grafana/templates/grafana.ini.j2
@@ -163,10 +163,10 @@ serve_from_sub_path = true
 ;disable_initial_admin_creation = false
 
 # default admin user, created on startup
-;admin_user = admin
+admin_user = {{ grafana.admin_user }}
 
 # default admin password, can be changed before first start of grafana,  or in profile settings
-;admin_password = admin
+admin_password = {{ grafana.admin_password }}
 
 # used for signing
 ;secret_key = SW2YcwTIb9zpOOhoPsMm
