Story #7967: Update iteritems() function to items() to be fully compatible with Python 2 & 3.
https://docs.ansible.com/ansible/latest/user_guide/playbooks_python_version.html#dict-iteritems

--- a/deployment/ansible-vitam/roles/vitam/templates/storage/static-strategy.json.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/storage/static-strategy.json.j2
@@ -12,7 +12,7 @@
         ]
     }
     {% if other_strategies is defined %}
-    {% for strategy_name, strategy_offers in other_strategies.iteritems() %}
+    {% for strategy_name, strategy_offers in other_strategies.items() %}
     ,
     {
         "id" : "{{ strategy_name }}",
