story #7477 delete dip

--- a/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/vitam.conf.j2
@@ -10,6 +10,7 @@ storeGraphOverlapDelay: 300
 expireCacheEntriesDelay: 300
 deleteIncompleteReconstructedUnitDelay: 2592000
 migrationBulkSize: 10000
+workspaceFreespaceThreshold: {{ vitam.metadata.workspaceFreespaceThreshold | default(25) }}
 {% endif %}
 distributionThreshold : 100000
 eliminationAnalysisThreshold : 100000
