--- a/deployment/ansible-vitam-extra/roles/grafana/templates/grafana.conf.j2
+++ b/deployment/ansible-vitam-extra/roles/grafana/templates/grafana.conf.j2
@@ -9,7 +9,7 @@
 # instance name, defaults to HOSTNAME environment variable value or hostname if HOSTNAME var is empty
 ;instance_name = ${HOSTNAME}
 
-#################################### Paths ####################################
+#################################### Paths #####################################
 [paths]
 # Path to where grafana can store temp files, sessions, and the sqlite3 db (if that is used)
 ;data = /var/lib/grafana
@@ -18,7 +18,7 @@
 ;temp_data_lifetime = 24h
 
 # Directory where grafana can store logs
-;logs = /var/log/grafana
+logs = {{ vitam_defaults.folder.root_path | default('/vitam') }}/log/grafana
 
 # Directory where grafana will automatically scan and look for plugins
 ;plugins = /var/lib/grafana/plugins
