--- a/deployment/ansible-vitam-extra/roles/grafana/templates/service-grafana.json.j2
+++ b/deployment/ansible-vitam-extra/roles/grafana/templates/service-grafana.json.j2
@@ -1,15 +1,15 @@
 {
   "service": {
-    "name": "Grafana server",
-    "port": {{ grafana.http_port }},
+    "name": "grafana-server",
+    "port": {{ grafana.http_port | default(3000) }},
     "enable_tag_override": false,
     "tags": ["grafana"],
     "checks": [
       {
-        "name": "Grafana server : TCP check",
-        "notes": "Status grafana server",
-        "tcp": "{{ ip_admin }}:{{ grafana.http_port }}",
-        "interval": "{{ grafana.check_consul }}s"
+        "name": "grafana-server : TCP check",
+        "notes": "Status grafana-server",
+        "tcp": "{{ ip_admin }}:{{ grafana.http_port | default(3000) }}",
+        "interval": "{{ grafana.check_consul | default(10) }}s"
       }
     ]
   }
